@@ -47,6 +47,8 @@ dillo-fltk2
  - Added code to ignore the first <P> after <LI>.
  - Added a http_referer preference. See details in dillorc2.
  - Added a text placeholder: "[IMG]" for img_off mode.
+ - Fixed a SEGFAULT bug in http.c (handling of web->url).
+ - Fixed handling of #anchors with repush, and other operations.
    Patches: Jorge Arellano Cid
 +- Connected signals to <li> elements (fixes links within lists).
  - Enabled text, background-color, panel_size, geometry, fullscreen,
